--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "antd-style": "^3.7.1",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "google-map-react": "^2.2.1",
     "i18next": "^24.2.2",
