--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-input-mask": "^2.0.4",
     "react-router": "^7.2.0",
+    "react-router-dom": "^7.5.0",
     "tslib": "^2.8.1",
     "usehooks-ts": "^3.1.1"
   },
