fix: update inspection form flow

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 SKIP_PREFLIGHT_CHECK=false
 DISABLE_ESLINT_PLUGIN=false
+
+VITE_API_URL=https://api.outfit4rent.online/api
+VITE_ABLY_API_KEY=W-B0NQ.KAJISQ:I4rK6NK9X9rSrsJIcTngZeZy3jO2Fqfhfcf6D68G5Yw
