chore: update auth

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SKIP_PREFLIGHT_CHECK=false
 DISABLE_ESLINT_PLUGIN=false
+VITE_ABLY_API_KEY=W-B0NQ.KAJISQ:I4rK6NK9X9rSrsJIcTngZeZy3jO2Fqfhfcf6D68G5Yw
