--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-input-mask": "^2.0.4",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "tslib": "^2.8.1",
     "usehooks-ts": "^3.1.1"
   },
